--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,5 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-// @import './example';
+@import './example';
 a {
   text-decoration: none;
 }
